--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #f8f8f8;
+}
 .content {
     width: 1200px;
     margin: auto;
@@ -13,13 +16,57 @@
     width: 350px;
     padding: 10px;
 }
-
 .contacts {
     display: flex;
     flex-direction: row;
 }
-
 .contact-form {
-    width: 45%;
+    width: 50%;
     padding: 10px;
+}
+.menu {
+    width: 1200px;
+    background-color: #ccc;
+    list-style-type: none;
+    font-family: "Arial Black";
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+}
+.menu>li {
+    width: 100px;
+}
+.menu>li>a {
+    text-decoration: none;
+    color: #333;
+}
+.card > h3 {
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+    background-color: #eaeaea;
+}
+.card-info-small {
+    font-size: 14px;
+    font-style: italic;
+    color: #707070;
+    line-height: 16px;
+}
+.card-info-full {
+    font-size: 16px;
+    font-weight: 400;
+    color: #484343;
+    line-height: 24px;
+    text-align: left;
+}
+.card-info-stats {
+    list-style-type: none;
+}
+.callback>input{
+    width: 150px;
+    color: black;
+    background-color: #b5b7ba;
+}
+a>img {
+    outline: 3px solid black;
 }
