--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -24,21 +24,36 @@ body {
     width: 50%;
     padding: 10px;
 }
-.menu {
+header {
     width: 1200px;
     background-color: #ccc;
+    display: flex;
+    flex-direction: row;
+
+}
+.menu{
     list-style-type: none;
     font-family: "Arial Black";
     display: flex;
     flex-direction: row;
-    margin: auto;
 }
 .menu>li {
     width: 100px;
 }
-.menu>li>a {
+.menu li a {
     text-decoration: none;
     color: #333;
+}
+.menu li a:hover {
+    color: red;
+}
+.logo{
+    content:  url("../img/kane_logotip.png");
+    width: 300px;
+    height: 30px;
+    padding: 0;
+    margin: 5px;
+
 }
 .card > h3 {
     color: black;
@@ -69,4 +84,31 @@ body {
 }
 a>img {
     outline: 3px solid black;
+}
+a>img:hover {
+    outline: none;
+}
+
+a:hover {
+    color: red;
+}
+input {
+    text-transform: capitalize;
+}
+
+input[type="email"] {
+    color: white;
+    background: black;
+}
+
+.card>p:first-letter {
+    font-family: Calibri;
+    font-size: 30px;
+}
+
+.table td {
+    border: 1px solid red;
+}
+.table {
+    border: 1px solid red;
 }
