--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,9 +1,7 @@
-body {
-    background-color: #f8f8f8;
-}
-.content {
+.container{
     width: 1200px;
     margin: auto;
+    background-color: #f8f8f8;
 }
 .catalog {
     display: flex;
@@ -25,7 +23,7 @@ body {
     padding: 10px;
 }
 header {
-    width: 1200px;
+    height: 60px;
     background-color: #ccc;
     display: flex;
     flex-direction: row;
@@ -36,6 +34,7 @@ header {
     font-family: "Arial Black";
     display: flex;
     flex-direction: row;
+    height: 100%;
 }
 .menu>li {
     width: 100px;
@@ -48,18 +47,36 @@ header {
     color: red;
 }
 .logo{
-    content:  url("../img/kane_logotip.png");
-    width: 300px;
-    height: 30px;
-    padding: 0;
-    margin: 5px;
+    vertical-align: middle;
+    width: 40%;
 
 }
-.card > h3 {
+.logo img {
+    width: 300px;
+    padding: 15px;
+}
+
+.item-info > h3 {
     color: black;
     font-size: 18px;
     font-weight: 400;
     background-color: #eaeaea;
+}
+.card {
+    display: flex;
+    flex-direction: row;
+}
+.card-info {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+.card-img {
+    float: left;
+    margin-right: 15px;
+}
+.card-button {
+
 }
 .card-info-small {
     font-size: 14px;
@@ -101,7 +118,7 @@ input[type="email"] {
     background: black;
 }
 
-.card>p:first-letter {
+.item-info>p:first-letter {
     font-family: Calibri;
     font-size: 30px;
 }
@@ -111,4 +128,31 @@ input[type="email"] {
 }
 .table {
     border: 1px solid red;
+}
+
+footer {
+    height: 30px;
+    background-color: #707070;
+}
+.copyright p {
+    vertical-align: middle;
+    text-align: center;
+    padding: 5px;
+}
+.card-button > input {
+    width: 100px;
+    border-radius: 20px;
+    background: red;
+    border: 1px solid darkred;
+
+}
+.card-button > input:hover {
+    width: 100px;
+    border-radius: 20px;
+    background: darkred;
+    border: 1px solid white;
+
+}
+.card-button {
+    margin: 10px auto;
 }
